# arm_grasp_pose_estimator

./: README.md
install/: local_setup.sh  setup.sh
install/arm_description/share/ament_index/resource_index/package_run_dependencies/: arm_description
install/arm_description/share/ament_index/resource_index/parent_prefix_path/: arm_description
install/arm_description/share/arm_description/: local_setup.sh  package.sh
install/arm_description/share/arm_description/rviz/: arm_6dof.rviz
install/arm_description/share/arm_description/urdf/mech/: arm_base.urdf.xacro  arm_define.urdf.xacro
install/arm_gazebo/lib/arm_gazebo/: trajectory_publisher_server
install/arm_gazebo/share/arm_gazebo/: package.sh  package.xml
install/arm_gazebo/share/arm_gazebo/config/: simple_controller.yaml
install/arm_gazebo/share/arm_gazebo/launch/: 6dof_gazebo_controller.launch.py  6dof_test.launch.py
install/arm_gazebo/share/arm_gazebo/world/: empty_world.sdf
install/grasp_pose_estimator/lib/grasp_pose_estimator/: depth_process  yolo_detect
install/grasp_pose_estimator/share/grasp_pose_estimator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/arm_description/install/arm_description/share/arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
src/arm_description/install/arm_description/share/arm_description/environment/: path.dsv  (+1 more)
src/arm_description/launch/: 6dof_rviz.launch.py
src/arm_description/log/: latest_build
src/arm_description/urdf/control/: arm_transmission.urdf.xacro  gazebo_sim_ros2_control.urdf.xacro
src/arm_description/urdf/mech/: adaptive_gripper.urdf.xacro
src/arm_description/urdf/robots/: arm_model.urdf.xacro
src/arm_description/urdf/sensors/: intel_rgbd_cam_d435.urdf.xacro
src/arm_gazebo/: setup.py
src/arm_gazebo/config/: ros_gz_bridge.yaml
src/arm_gazebo/install/: local_setup.sh  setup.sh
src/arm_gazebo/install/arm_gazebo/share/arm_gazebo/: package.ps1  package.sh  package.xml
src/arm_gazebo/install/arm_gazebo/share/arm_gazebo/config/: simple_controller.yaml
src/arm_gazebo/install/arm_gazebo/share/arm_gazebo/launch/: 6dof_gazebo.launch.py  6dof_gazebo_controller.launch.py
src/arm_gazebo/log/: latest_build
src/arm_gazebo/world/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/arm_gazebo/world/log/: latest_build
src/grasp_pose_estimator/: setup.cfg  setup.py
src/grasp_pose_estimator/launch/: grasp_estimator.launch.py
src/grasp_pose_estimator/rviz/: grasp.rviz
(+29 files in other folders)
