<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_gazebo</name>
  <version>0.0.0</version>
  <description>6 DOF robotic arm</description>
  <maintainer email="bineeshajabi98@gmail.com">Bineesha</maintainer>
  <license>Apache-2.0</license>

  <depend>std_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>arm_description</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>xacro</test_depend>

  <build_depend>controller_manager</build_depend>
  <build_depend>transmission_interface</build_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
